# qec-emulator

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml  paper.yml
qec_emulator/: CITATION.cff  LICENSE  README.md  __init__.py  api.py  benchmark.py  cli.py  config.py  export.py  interop.py  noise.py  paper.bib  paper.md  pyproject.toml  scheduler.py  visualization.py
qec_emulator/qec_emulator/: README.md  __init__.py  benchmark.py  codes.py  decoders.py  noise.py  paper.md  provenance.py  pyproject.toml
qec_emulator/qec_emulator/qec_emulator/: __main__.py  codes.py  decoders.py  export.py  provenance.py
qec_emulator/tests/: test_all.py
tests/: test_all.py
